remodel main page, change text styles, organize resume page, fix footer spacing

--- a/css/typography.css
+++ b/css/typography.css
@@ -29,12 +29,12 @@ body {
 
 .subheader-text {
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 550;
 }
 
 .body-text {
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .project-card-text {
