--- a/css/utilities.css
+++ b/css/utilities.css
@@ -82,6 +82,7 @@ a.button:hover {
   text-decoration-thickness: 2px;
   cursor: pointer;
   transform: scale(1.1);
+  transition: transform 200ms ease-in-out;
 }
 
 
